# environ

./: .pre-commit-config.yaml  README.md  package.json  pyproject.toml  setup.cfg
data/: TABELLA 1_PM10_2018_new.xlsx  born_residence.csv  elenco comuni Piero.xlsx  limits_IT_all.topo.json  limits_IT_municipalities.topo.json  nascita.csv  residenza.csv
environ/: __init__.py  wrangler.py
output/: ispra.csv  ispra_comune.csv  mutation.csv  nascita.csv  residenza.csv
tests/: __init__.py
